[gd_scene load_steps=22 format=3 uid="uid://bx3mod8pqcrsd"]

[ext_resource type="Script" path="res://scripts/Ball.gd" id="1_0k7od"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="2_8bpcg"]
[ext_resource type="Texture2D" uid="uid://bka37re8brfsp" path="res://images/round-gradient.png" id="3_r2ahu"]
[ext_resource type="Shader" path="res://addons/GPUTrail-main/shaders/trail.gdshader" id="4_8effn"]
[ext_resource type="Shader" path="res://addons/GPUTrail-main/shaders/trail_draw_pass.gdshader" id="5_ihc8v"]
[ext_resource type="Texture2D" uid="uid://crk6pkb7e5rwc" path="res://addons/GPUTrail-main/defaults/texture.tres" id="6_mnr01"]
[ext_resource type="Texture2D" uid="uid://ct31fhxvcragr" path="res://addons/GPUTrail-main/defaults/curve.tres" id="7_3pokd"]
[ext_resource type="Script" path="res://addons/GPUTrail-main/GPUTrail3D.gd" id="8_wuufm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_scbn3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t3p6m"]
render_priority = 0
shader = ExtResource("2_8bpcg")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/size = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oakse"]
next_pass = SubResource("ShaderMaterial_t3p6m")

[sub_resource type="SphereShape3D" id="SphereShape3D_xei7b"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xd51s"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Shadow:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Shadow:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yjqqn"]
albedo_color = Color(0.0886668, 0.76, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pswn4"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wq3n2"]
no_depth_test = true
shading_mode = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yk2jc"]
albedo_color = Color(0.488667, 0.48, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rjn21"]
albedo_color = Color(0.315, 0.75, 0.32225, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v5xe6"]
shader = ExtResource("4_8effn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e0aow"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("5_ihc8v")
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/emmission_transform = Projection(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)
shader_parameter/flags = 44
shader_parameter/tex = ExtResource("6_mnr01")
shader_parameter/color_ramp = ExtResource("6_mnr01")
shader_parameter/curve = ExtResource("7_3pokd")

[sub_resource type="QuadMesh" id="QuadMesh_7q4ig"]
material = SubResource("ShaderMaterial_e0aow")

[node name="Ball" type="CharacterBody3D"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, -10, 30)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_0k7od")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_scbn3")

[node name="CSGSphere3D" type="CSGSphere3D" parent="."]
cast_shadow = 0
material = SubResource("StandardMaterial3D_oakse")

[node name="Area" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area"]
shape = SubResource("SphereShape3D_xei7b")

[node name="Shadow" type="Sprite3D" parent="."]
texture = ExtResource("3_r2ahu")

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, -100, 0)
collision_mask = 8
hit_from_inside = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xd51s")

[node name="Debug_MaxHeight" type="CSGBox3D" parent="."]
material_override = SubResource("StandardMaterial3D_yjqqn")
size = Vector3(0.266602, 0.285156, 65.9668)

[node name="Debug_Z" type="CSGSphere3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_pswn4")
material = SubResource("StandardMaterial3D_wq3n2")

[node name="Debug_ZLand" type="CSGSphere3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_yk2jc")
material = SubResource("StandardMaterial3D_wq3n2")

[node name="Debug_LaunchHeight" type="CSGSphere3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_rjn21")
material = SubResource("StandardMaterial3D_wq3n2")

[node name="Trail" type="GPUParticles3D" parent="."]
amount = 30
lifetime = 30.0
explosiveness = 1.0
fixed_fps = 120
process_material = SubResource("ShaderMaterial_v5xe6")
draw_pass_1 = SubResource("QuadMesh_7q4ig")
script = ExtResource("8_wuufm")
length = 30
length_seconds = 0.25
color_ramp = ExtResource("6_mnr01")
curve = ExtResource("7_3pokd")
billboard = true
_defaults_have_been_set = true
